--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,20 @@
         <scope>test</scope>
     </dependency>
     
+    <!-- Log4j2 -->
+<dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-api</artifactId>
+    <version>2.23.1</version>
+</dependency>
+
+<dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-core</artifactId>
+    <version>2.23.1</version>
+</dependency>
+
+    
     
 <dependency>
 			<groupId>io.github.bonigarcia</groupId>
