--- a/pom.xml
+++ b/pom.xml
@@ -24,12 +24,22 @@
     <version>5.1.1</version>
 </dependency>
 
+
+
+<dependency>
+    <groupId>com.openhtmltopdf</groupId>
+    <artifactId>openhtmltopdf-pdfbox</artifactId>
+    <version>1.0.10</version>
+</dependency>
+
 <!-- Extent Cucumber Adapter -->
 <dependency>
     <groupId>tech.grasshopper</groupId>
     <artifactId>extentreports-cucumber7-adapter</artifactId>
     <version>1.14.0</version>
 </dependency>
+
+
 
 
     <!-- Selenium -->
