--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,8 @@
 
 
 
+
+
     <!-- Selenium -->
     <dependency>
         <groupId>org.seleniumhq.selenium</groupId>
@@ -63,6 +65,14 @@
         <artifactId>cucumber-testng</artifactId>
         <version>7.14.0</version>
     </dependency>
+    
+      <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-bom</artifactId>
+            <version>7.14.0</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
 
     <!-- TestNG -->
     <dependency>
